# WanderAI-backend

./: .gitignore  Application.py  README.md  pyproject.toml  requirements.txt  wander_ai.sql
agent/: llm.py  message.py  model.py  node.py  output_parser.py  prompt_template.py  runnable.py  state.py  tool.py  workflow.py
common/: constant.py  context.py  database.py  exception.py  log.py  properties.py  util.py
common/constant/: JwtConstant.py  MessageConstant.py
model/: dto.py  entity.py  result.py  schema.py  vo.py
server/: app.py  handler.py  interceptor.py
server/agent/: HotspotAgent.py  TitleGenerator.py  TravelChatAgent.py  TravelGuideAgent.py  graph.py  llm.py  model.py  node.py  output_parser.py  prompt_template.py  runnable.py  state.py
server/agent/interface/: HotspotAgent.py  TitleGenerator.py  TravelChatAgent.py
server/controller/: AdminController.py  ChatController.py  HistoryController.py  HotspotController.py  StudentController.py  SuggestionController.py  UploadController.py  UserController.py
server/llm/: ChatLLM.py  hotspots.py
server/mapper/: AdminMapper.py  HistoryTitleMapper.py  StudentMapper.py  SuggestionMapper.py  UserHistoryMapper.py  UserMapper.py
server/service/: AdminService.py  ChatService.py  GuideService.py  HistoryService.py  HistoryTitleService.py  HotspotService.py  StudentService.py  SuggestionService.py  UserService.py
src/: Application.py
src/agent/: node.py  runnable.py
src/common/: database.py  log.py  properties.py  util.py
src/server/: app.py  interceptor.py
src/wanderai/: Application.py
(+50 files in other folders)
