[project]
name = "WanderAI-backend"
version = "1.0.0"
description = "WanderAI服务器"
authors = [
    { name = "njdldkl", email = "2312454@mail.nankai.edu.cn" },
    { name = "qingzhou" },
]
license = "LGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-oss-v2>=1.1.2",
    "asyncmy>=0.2.10",
    "dashscope>=1.23.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-mysql>=2.0.15",
    "langsmith>=0.4.8",
    "numexpr>=2.11.0",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.urls]
Repository = "https://github.com/njdldkl666699/WanderAI-backend"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
wanderai-server = "wanderai.Application:main"
